--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - uses: browser-actions/setup-chrome@latest
+    - run: chrome --version
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B clean test
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
