--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: browser-actions/setup-chrome@latest
     - run: chrome --version
     - name: Build with Maven
-      run: mvn -B clean test
+      run: mvn clean test -DBROWSER=chrome-h verify
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
