--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,11 @@ jobs:
     - run: chrome --version
     - name: Build with Maven
       run: mvn clean test -DBROWSER=chrome-h verify
+    - name: Deploy pages
+      uses: JamesIves/github-pages-deploy-action@v4.5.0
+      with:
+        branch: gh-pages
+        folder: ./ExtentReport/Reports
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
