--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -59,7 +59,7 @@ jobs:
         # Optional plain body:
         body: Build job of ${{github.repository}} completed successfully!
         # Optional HTML body read from file:
-        html_body: file://index.html
+        html_body: file:./test-output/Html/index.html
         # Optional carbon copy recipients:
         cc: kyloren@example.com,leia@example.com
         # Optional blind carbon copy recipients:
